{
    "name": "TouchActions",
    "maps": [
        {
            "name": "TouchMap",
            "id": "000ec1eb-f162-479b-9e26-cb9c076fa776",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "90658c6d-1cf1-41a6-8095-f3b827e007b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "94a6338e-4286-44fa-b195-040228946163",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PinchFinger1",
                    "type": "Value",
                    "id": "280b2f02-b84b-414c-a515-f7bad0676d18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PinchFinger2",
                    "type": "Value",
                    "id": "47e8931c-9c2a-4dda-a252-a329cb2628bb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPinch",
                    "type": "Value",
                    "id": "5bbb47d6-928c-49b9-8a71-73d94eb8ee37",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f92a34a-db13-4e8c-ab83-f959c363ec19",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46b1c09e-4a22-42fc-a83d-a85afa222d1e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc60cc1a-9d83-43c7-8ba9-56dc98c8196d",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PinchFinger1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "790eef02-8da8-44d7-bff8-35f9a8164a3c",
                    "path": "<Touchscreen>/touch2/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PinchFinger2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "53c8e046-975c-4a23-9568-919c13a49563",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPinch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "9721820c-d786-4df4-87b9-753291d07d0b",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "ad7fad67-1f51-452f-88fc-5fbebec649b9",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "2e069788-dcbb-4fe4-852a-ee64d2f75be2",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPinch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}